syntax = "proto3";

package lagompb.samples;

option java_multiple_files = true;
option java_package = "io.superflat.lagompb.samples.protobuf.account";
option java_outer_classname = "EventsProto";

import "lagompb/v1/extensions.proto";

message AccountOpened {
    string company_uuid = 1 [(lagompb.v1.kafka).partition_key = true];
    string account_id = 2;
    double balance = 3;
    string account_owner = 4;
}

message MoneyTransferred {
    string company_uuid = 1 [(lagompb.v1.kafka).partition_key = true];
    string account_id = 2;
    double balance = 3;
}

message MoneyReceived {
    string company_uuid = 1 [(lagompb.v1.kafka).partition_key = true];
    string account_id = 2;
    double balance = 3;
}
